feat: add multi-language support (de, el, es, fr, it, ko, nl, pt_BR, pt_PT, ru, zh_CN, zh_TW) and detailed descriptions

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "__MSG_appName__",
+  "name": "GitHub DeepWiki (Unofficial)",
   "short_name": "github-deepwiki",
   "version": "1.0.0",
   "manifest_version": 3,
