--- a/app/manifest.json
+++ b/app/manifest.json
@@ -52,5 +52,16 @@
   ],
   "host_permissions": [
     "https://github.com/*"
-  ]
+  ],
+  "__firefox__background": {
+    "scripts": [
+      "scripts/background.js"
+    ]
+  },
+  "__firefox__browser_specific_settings": {
+    "gecko": {
+      "id": "{0b2537a5-b568-4e8e-b85c-39d5a617a6ba}",
+      "strict_min_version": "102.0"
+    }
+  }
 }
