style: add emoji to section headers in all detailed-description.txt files

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "webextension-toolbox dev",
     "build": "webextension-toolbox build",
+    "build-all": "npm run build chrome && npm run build firefox && npm run build edge",
     "lint": "npm run lint-biome && npm run lint-secretlint",
     "lint-biome": "biome check --write",
     "lint-secretlint": "secretlint \"**/*\" --secretlintignore .gitignore",
