refactor: rename to GitHub DeepWiki Button

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "GitHub DeepWiki (Unofficial)",
+  "name": "GitHub DeepWiki Button (Unofficial)",
   "short_name": "gh-deepwiki",
   "version": "1.0.1",
   "manifest_version": 3,
