--- a/.github/workflows/repomix.yml
+++ b/.github/workflows/repomix.yml
@@ -3,17 +3,9 @@ name: Pack repository with Repomix
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-    paths:
-      - 'app/**'
-      - 'packages/**'
-      - 'scripts/**'
+    branches: [ main ]
   pull_request:
-    paths:
-      - 'app/**'
-      - 'packages/**'
-      - 'scripts/**'
+    branches: [ main ]
 
 jobs:
   pack-repo:
