refactor: simplify Repomix configuration and change output format to XML

--- a/.github/workflows/repomix.yml
+++ b/.github/workflows/repomix.yml
@@ -18,14 +18,11 @@ jobs:
         uses: yamadashy/repomix/.github/actions/repomix@main
         with:
           directories: app packages scripts
-          include: "**/*.js,**/*.ts,**/*.css,**/*.json,**/*.md"
-          ignore: "**/*.test.js,**/node_modules/**"
-          output: github-deepwiki.txt
-          compress: true
+          output: repomix-output.xml
 
       - name: Upload Repomix output
         uses: actions/upload-artifact@v4
         with:
-          name: github-deepwiki-code
-          path: github-deepwiki.txt
+          name: repomix-output.xml
+          path: repomix-output.xml
           retention-days: 30
